Issue #1672382: Sliders for price ranges (All products display, for example) don't work on mobile devices.
Reviewed-on: https://code.drupalcommerce.org/163
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default-normal.css
+++ b/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default-normal.css
@@ -37,6 +37,27 @@
 /**********************************************
 * 3.2. Zone content
 **********************************************/
+/*******************************************
+* 3.2.1. Sidebar first
+*******************************************/
+/* Price range */
+#search-api-ranges-block-view-form .range-slider-box {
+  display: block;
+}
+#search-api-ranges-block-view-form label {
+  float: left;
+  text-align: right;
+}
+/* Category */
+.region-sidebar-first .block-facetapi.field_category .item-list {
+  border: 1px solid #d9d9d9;
+  height: 220px;
+  padding: 10px 20px;
+  overflow-y: scroll;
+}
+/*******************************************
+* 3.2.2. Content
+*******************************************/
 /* HP blocks: Top advert */
 #promotional_banner .promotional_banner_special_offer {
   float: right;
